<resources>
    <string name="app_name">Calculadora De Notas</string>
    <string name="calcular">Calcular</string>
    <string name="n_mero_de_faltas">Número de Faltas</string>
    <string name="calculadora_de_notas">Calculadora De Notas</string>
    <string name="nota_1">Nota 1</string>
    <string name="nota_2">Nota 2</string>
    <string name="nota_3">Nota 3</string>
    <string name="nota_4">Nota 4</string>
    <string name="nota_final">Nota Final</string>
    <string name="clique_para_mais_detalhes">Clique para mais detalhes</string>
</resources>